@@ -7,3 +7,6 @@ license             = Perl_5
 [@Author::ETHER]
 :version = 0.019
 Test::MinimumVersion.max_target_perl = 5.010000
+
+[Prereqs / DevelopRequires]
+Test::Warnings = 0
